--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "dotenv": "^16.3.1",
     "express": "4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.3"
+    "luxon": "^3.4.4",
+    "mongoose": "^8.0.3",
+    "passport": "^0.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
