--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "description": "",
   "version": "1.0.0",
   "main": "app.js",
-  "engines": {"node": ">=14.0.0"},
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "scripts": {
     "start": "nodemon index.js"
   },
@@ -12,9 +14,11 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "4.18.2",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
     "mongoose": "^8.0.3",
