--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
     "mongoose": "^8.0.3",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0"
   },
   "devDependencies": {
